[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

# Build a library too (used by the two bins via `contracts::...`)
[lib]
name = "contracts"
path = "src/lib.rs"

[dependencies]
# Match your linera-sdk version
linera-sdk = "0.15.8"
linera-views = "0.15.4"
linera-base = "0.15.4"

async-graphql = { version = "=7.0.17", default-features = false }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
linera-sdk = { version = "0.15.4", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "contracts_contract"
path = "src/contract.rs"

[[bin]]
name = "contracts_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
